--- a/茶樹病害影像辨識模型原始專案說明.md
+++ b/茶樹病害影像辨識模型原始專案說明.md
@@ -122,8 +122,8 @@
 
 資料集內容描述：
 > Tea plant nutrient, disease and pest symptom image dataset (茶樹營養，病蟲害徵狀影像資料集)
-> 關於此資料集的詳細說明請見以下網址: 
-> https://aidata.nchu.edu.tw/smarter/dataset/smarter_04_t14088_0_tead_20220826_img1_t14088
+> 關於此資料集的詳細說明請點選[茶樹營養，病蟲害徵狀影像資料集](https://aidata.nchu.edu.tw/smarter/dataset/smarter_04_t14088_0_tead_20220826_img1_t14088)
+
 
 > 在執行模型訓練之前，有先使用OpenCV 套件及自編碼器做資料品質檢測
 > 由於田間徵狀照片的近照會有徵狀清楚但是背景模糊問題，因此在OpenCV篩選時，只有使用亮度是否有異常做篩選
