--- a/茶樹病害影像辨識模型原始專案說明.md
+++ b/茶樹病害影像辨識模型原始專案說明.md
@@ -1,4 +1,4 @@
-# 專案名稱
+# 茶樹病害影像辨識模型原始專案說明
 
 ## 介绍
 
@@ -35,7 +35,7 @@
 > ResNet34：
 
 - 預訓練的深度卷積神經網絡（CNN）3。
-- ResNet34 使用殘差塊（Residual Blocks），這使得它能夠在更深的網絡中保持較好的性能，並且避免梯度消失問題。
+- ResNet34 使用殘差塊（Residual Blocks），能夠在更深的網絡中保持較好的性能，並且避免梯度消失問題。
 
 > 多標籤分類：
 
@@ -84,9 +84,9 @@
 
 模型經過評估，並在測試數據上達到以下性能 :
 
-- 精度: [mAP: 0.837]
-- 召回率: [召回率值]
-- F1 分數: [F1 分數]
+- 精度: [73 %]
+- 召回率: [66 %]
+- F1 分數: [89 %]
 
 ### 模型可視化
 
@@ -143,10 +143,10 @@
 
 ### Anaconda
 
-匯入本專案提供的FastAI.yml檔案，以建立FastAI的Python 虛擬環境
-Python 虛擬環境，Python 版本 >= 3.8
-來源於 [FastAI.yml]()。你可以在 [FastAI.yml]() 下載yml檔案。
-直接開啟Anaconda，使用import功能建立FastAI虛擬環境。
+> 匯入本專案提供的FastAI.yml檔案，以建立FastAI的Python 虛擬環境
+> Python 虛擬環境，Python 版本 >= 3.8
+> 下載 [FastAI.yaml](https://github.com/Nchuai04/Tea-disease-identification-model/blob/main/fastai.yaml)。
+> 直接開啟Anaconda，使用import功能建立FastAI虛擬環境。
 
 ## 使用說明
 
