--- a/茶樹病害影像辨識模型原始專案說明.md
+++ b/茶樹病害影像辨識模型原始專案說明.md
@@ -94,7 +94,7 @@
 
 |   層    |                                 圖片                                  |
 | :-----: | :-------------------------------------------------------------------: |
-|  side6?  |   <尚未上傳......另外補圖>   |
+|  side7  |   <img src="./gradCAM_smaller.jpg" alt="Grad-CAM" width="500")>   |
 
 ### 模型穩定性
 
