--- a/茶樹病害影像辨識模型原始專案說明.md
+++ b/茶樹病害影像辨識模型原始專案說明.md
@@ -18,8 +18,8 @@
 
 |                       原始圖片(茶樹徵狀照片)                       |                          推論結果(模型判斷病害結果)                           |
 | :--------------------------------------------------------------: | :---------------------------------------------------------------------: |
-| <img src="尚未上傳......另外補圖"> | <img src="尚未上傳......另外補圖> |
-| <img src="尚未上傳......另外補圖"> | <img src="尚未上傳......另外補圖> |
+| <img src="./img/tea_sample.jpg" width="500"> | <img src="./img/result2.jpg" width="500"> |
+
 
 ## 模型
 
@@ -29,6 +29,7 @@
 > 另外使用Gradcam 做AI可視化
 
 ### 模型架構
+<img src="./img/AI技術茶樹徵狀影像辨別模型之建立.jpg" with="500">
 
 模型採用了以下架構 :
 
@@ -42,7 +43,6 @@
 - 多標籤分類是一種分類任務，其中每個樣本可以屬於多個類別。
 - 使用自定義的精確度、召回率和 F1 分數作為評估指標
 
-<img src="尚未上傳......另外補圖">
 
 ### 訓練方式
 
@@ -92,9 +92,9 @@
 
 使用 Grad-CAM 技術進行視覺化，以產生模型對茶樹病害徵狀區域的注意力熱圖，並進行解釋。
 
-|   層    |                                 圖片                                  |
-| :-----: | :-------------------------------------------------------------------: |
-|  side7  |   <img src="./gradCAM_smaller.jpg" alt="Grad-CAM" width="500")>   |
+|   層    |                                 圖片                           |
+| :-----: | :-----------------------------------------------------------: |
+|  side7  |   <img src="./img/gradCAM_small.jpg" width="500">   |
 
 ### 模型穩定性
 
@@ -126,7 +126,8 @@
 
 
 > 在執行模型訓練之前，有先使用OpenCV 套件及自編碼器做資料品質檢測
-> 由於田間徵狀照片的近照會有徵狀清楚但是背景模糊問題，因此在OpenCV篩選時，只有使用亮度是否有異常做篩選
+> 由於田間徵狀照片的近照會有徵狀清楚但是背景模糊問題
+> 因此在OpenCV篩選時，只有使用亮度是否有異常做篩選
 
 ## 自訂資料集
 
@@ -156,7 +157,6 @@
 > 進入jupyter notebook，並開啟.ipynb執行資料品質篩選以及AI模型訓練 
 	jupyter notebook
 
-> 注意！若無提供使用相關說明，使用者下載原始專案後會不知道該怎麼使用
 
 ### 原始碼
 
