--- a/predata.ipynb
+++ b/predata.ipynb
@@ -7429,7 +7429,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "fdde8a67",
+   "id": "12e574ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7447,7 +7447,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "02f22eb1",
+   "id": "ffaa7d68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7483,7 +7483,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ca9f2690",
+   "id": "e8533a5e",
    "metadata": {},
    "outputs": [
     {
@@ -7532,7 +7532,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "87cfb74d",
+   "id": "58314deb",
    "metadata": {},
    "outputs": [
     {
@@ -13469,7 +13469,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f708f4b2",
+   "id": "ecc9c25f",
    "metadata": {},
    "outputs": [
     {
@@ -19496,14 +19496,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "cb268844",
+   "execution_count": 72,
+   "id": "9f686016",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "隨機選取的圖片（最多前五組）：\n",
+      "1: 24539.JPG\n",
+      "2: 7806.JPG\n",
+      "3: 2973.JPG\n",
+      "4: 7269.JPG\n",
+      "5: 22442.JPG\n",
+      "Total images: 2901\n",
+      "Training set size: 2611, Test set size: 290\n",
       "File processing completed.\n"
      ]
     }
@@ -19515,7 +19523,7 @@
     "import csv\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "def run_convert(all_classes, input_path, annotation_path, image_path, csv_path, test_path, train_percent=0.9, data_counter_start=0):\n",
+    "def run_convert(all_classes, input_path, annotation_path, image_path, csv_path, test_path, train_percent=0.9):\n",
     "    # 確保每個圖像都有對應的.xml文件，否則刪除該圖像\n",
     "    total_img = os.listdir(input_path)\n",
     "    total_img = [a for a in total_img if a.endswith(\"JPG\") or a.endswith(\"png\")]\n",
@@ -19530,59 +19538,74 @@
     "    total_img = [a for a in total_img if a.endswith(\"JPG\") or a.endswith(\"png\")]\n",
     "    num = len(total_img)\n",
     "    tv = int(num * (1 - train_percent))\n",
-    "    test_set = random.sample(range(num), tv)\n",
+    "    test_set = random.sample(total_img, tv)\n",
+    "    # 打印 test_set 的前五組數據\n",
+    "    print(\"隨機選取的圖片（最多前五組）：\")\n",
+    "    for i, data in enumerate(test_set[:5], start=1):\n",
+    "        print(f\"{i}: {data}\")\n",
+    "    image_labels = {}\n",
+    "    xml_list = [a for a in os.listdir(input_path) if a.endswith(\"xml\")]\n",
     "\n",
-    "    # Initialize CSV files\n",
-    "    with open(os.path.join(csv_path, 'train.csv'), 'w', newline='', encoding='utf-8') as ftrain, \\\n",
-    "         open(os.path.join(csv_path, 'trainLablesOnly.csv'), 'w', newline='', encoding='utf-8') as train_labels_only, \\\n",
-    "         open(os.path.join(csv_path, 'test.csv'), 'w', newline='', encoding='utf-8') as ftest:\n",
-    "        train_writer = csv.writer(ftrain)\n",
+    "    for data_file in xml_list:\n",
+    "        xml_path = os.path.join(input_path, data_file)\n",
+    "        with open(xml_path, 'r', encoding='utf-8') as f:\n",
+    "            soup = BeautifulSoup(f.read(), 'xml')\n",
+    "            filename = soup.find('filename').text + '.JPG'  # Assuming the image extension is .jpg\n",
+    "            if filename not in image_labels:\n",
+    "                image_labels[filename] = set()\n",
+    "\n",
+    "            for obj in soup.find_all('object'):\n",
+    "                label = obj.find('name').text\n",
+    "                image_labels[filename].add(label)\n",
+    "\n",
+    "    print(f\"Total images: {len(total_img)}\")\n",
+    "    print(f\"Training set size: {len(total_img) - len(test_set)}, Test set size: {len(test_set)}\")\n",
+    "\n",
+    "    # 初始化 labelsOnly CSV 文件\n",
+    "    with open(os.path.join(csv_path, 'trainLablesOnly.csv'), 'w', newline='', encoding='utf-8') as train_labels_only, \\\n",
+    "         open(os.path.join(csv_path, 'testLablesOnly.csv'), 'w', newline='', encoding='utf-8') as test_labels_only:\n",
     "        trainLablesOnly_writer = csv.writer(train_labels_only)\n",
-    "        test_writer = csv.writer(ftest)\n",
-    "        train_writer.writerow(['fname', 'labels', 'xmin', 'ymin', 'xmax', 'ymax'])\n",
+    "        testLablesOnly_writer = csv.writer(test_labels_only)\n",
     "        trainLablesOnly_writer.writerow(['fname', 'labels'])\n",
-    "        test_writer.writerow(['fname', 'labels', 'xmin', 'ymin', 'xmax', 'ymax'])\n",
+    "        testLablesOnly_writer.writerow(['fname', 'labels'])\n",
     "\n",
-    "        label_dict = {}\n",
-    "        image_labels = {}\n",
-    "        data_counter = data_counter_start\n",
-    "        xml_list = os.listdir(input_path)\n",
-    "        xml_list = [a for a in xml_list if a.endswith(\"xml\")]\n",
-    "\n",
-    "        for data_file in xml_list:\n",
-    "            xml_path = os.path.join(input_path, data_file)\n",
-    "            with open(xml_path, 'r', encoding='utf-8') as f:\n",
-    "                soup = BeautifulSoup(f.read(), 'xml')\n",
-    "                filename = soup.find('filename').text + '.jpg'  # Assuming the image extension is .jpg\n",
-    "\n",
-    "                if filename not in image_labels:\n",
-    "                    image_labels[filename] = set()\n",
-    "\n",
-    "                for obj in soup.find_all('object'):\n",
-    "                    label = obj.find('name').text\n",
-    "                    xmin = obj.bndbox.find('xmin').text\n",
-    "                    ymin = obj.bndbox.find('ymin').text\n",
-    "                    xmax = obj.bndbox.find('xmax').text\n",
-    "                    ymax = obj.bndbox.find('ymax').text\n",
-    "                    image_labels[filename].add(label)\n",
-    "\n",
-    "                    # Write to the test set or the full training set CSV\n",
-    "                    if data_counter in test_set:\n",
-    "                        test_writer.writerow([filename, label, xmin, ymin, xmax, ymax])\n",
-    "                        # 複製圖像和XML文件到測試資料夾\n",
-    "                        shutil.copy(os.path.join(input_path, filename), os.path.join(test_path, filename))\n",
-    "                        shutil.copy(xml_path, os.path.join(test_path, data_file))\n",
-    "                    else:\n",
-    "                        train_writer.writerow([filename, label, xmin, ymin, xmax, ymax])\n",
-    "                        # 複製圖像和XML文件到訓練資料夾\n",
-    "                        shutil.copy(os.path.join(input_path, filename), os.path.join(image_path, filename))\n",
-    "                        shutil.copy(xml_path, os.path.join(annotation_path, data_file))\n",
-    "\n",
-    "                data_counter += 1\n",
-    "\n",
-    "        # Write aggregated labels for each image to the training labels only CSV\n",
     "        for filename, labels in image_labels.items():\n",
-    "            trainLablesOnly_writer.writerow([filename, ' '.join(labels)])\n",
+    "            if filename in test_set:\n",
+    "                testLablesOnly_writer.writerow([filename, ' '.join(labels)])\n",
+    "                # 複製圖像和XML文件到測試資料夾\n",
+    "                shutil.copy(os.path.join(input_path, filename), os.path.join(test_path, filename))\n",
+    "                shutil.copy(os.path.join(input_path, filename[:-4] + '.xml'), os.path.join(test_path, filename[:-4] + '.xml'))\n",
+    "            else:\n",
+    "                trainLablesOnly_writer.writerow([filename, ' '.join(labels)])\n",
+    "                # 複製圖像和XML文件到訓練資料夾\n",
+    "                shutil.copy(os.path.join(input_path, filename), os.path.join(image_path, filename))\n",
+    "                shutil.copy(os.path.join(input_path, filename[:-4] + '.xml'), os.path.join(annotation_path, filename[:-4] + '.xml'))\n",
+    "\n",
+    "    # 根據 labelsOnly CSV 文件生成 train.csv 和 test.csv\n",
+    "    def generate_full_csv(labels_only_csv, full_csv, dataset_path):\n",
+    "        with open(labels_only_csv, 'r', encoding='utf-8') as labels_file, \\\n",
+    "             open(full_csv, 'w', newline='', encoding='utf-8') as full_file:\n",
+    "            labels_reader = csv.reader(labels_file)\n",
+    "            full_writer = csv.writer(full_file)\n",
+    "            next(labels_reader)  # Skip header\n",
+    "            full_writer.writerow(['fname', 'labels', 'xmin', 'ymin', 'xmax', 'ymax'])\n",
+    "\n",
+    "            for row in labels_reader:\n",
+    "                filename, labels = row\n",
+    "                xml_path = os.path.join(dataset_path, filename[:-4] + '.xml')\n",
+    "                with open(xml_path, 'r', encoding='utf-8') as f:\n",
+    "                    soup = BeautifulSoup(f.read(), 'xml')\n",
+    "                    for obj in soup.find_all('object'):\n",
+    "                        label = obj.find('name').text\n",
+    "                        if label in labels.split():\n",
+    "                            xmin = obj.bndbox.find('xmin').text\n",
+    "                            ymin = obj.bndbox.find('ymin').text\n",
+    "                            xmax = obj.bndbox.find('xmax').text\n",
+    "                            ymax = obj.bndbox.find('ymax').text\n",
+    "                            full_writer.writerow([filename, label, xmin, ymin, xmax, ymax])\n",
+    "\n",
+    "    generate_full_csv(os.path.join(csv_path, 'trainLablesOnly.csv'), os.path.join(csv_path, 'train.csv'), annotation_path)\n",
+    "    generate_full_csv(os.path.join(csv_path, 'testLablesOnly.csv'), os.path.join(csv_path, 'test.csv'), test_path)\n",
     "\n",
     "    print('File processing completed.')\n",
     "\n",
@@ -19600,109 +19623,8 @@
     "os.makedirs(test_path, exist_ok=True)\n",
     "\n",
     "run_convert(all_classes, input_path, annotation_path, image_path, csv_path, test_path)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "771c17b5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File processing completed.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import random\n",
-    "import shutil\n",
-    "import csv\n",
-    "from bs4 import BeautifulSoup\n",
     "\n",
-    "def run_convert(all_classes, input_path, annotation_path, image_path, csv_path, test_path, train_percent=0.9, data_counter_start=0):\n",
-    "    # 確保每個圖像都有對應的.xml文件，否則刪除該圖像\n",
-    "    total_img = os.listdir(input_path)\n",
-    "    total_img = [a for a in total_img if a.endswith(\"JPG\") or a.endswith(\"png\")]\n",
     "\n",
-    "    for name in total_img:\n",
-    "        if not os.path.isfile(os.path.join(input_path, name[:-4] + '.xml')):\n",
-    "            print(f\"Removing image {name} as it has no corresponding XML file.\")\n",
-    "            os.remove(os.path.join(input_path, name))\n",
-    "\n",
-    "    # 更新 total_img 清單\n",
-    "    total_img = os.listdir(input_path)\n",
-    "    total_img = [a for a in total_img if a.endswith(\"JPG\") or a.endswith(\"png\")]\n",
-    "    num = len(total_img)\n",
-    "    tv = int(num * (1 - train_percent))\n",
-    "    test_set = random.sample(range(num), tv)\n",
-    "\n",
-    "    # Initialize CSV files\n",
-    "    with open(os.path.join(csv_path, 'train.csv'), 'w', newline='', encoding='utf-8') as ftrain, \\\n",
-    "         open(os.path.join(csv_path, 'trainLablesOnly.csv'), 'w', newline='', encoding='utf-8') as train_labels_only, \\\n",
-    "         open(os.path.join(csv_path, 'test.csv'), 'w', newline='', encoding='utf-8') as ftest:\n",
-    "        train_writer = csv.writer(ftrain)\n",
-    "        trainLablesOnly_writer = csv.writer(train_labels_only)\n",
-    "        test_writer = csv.writer(ftest)\n",
-    "        train_writer.writerow(['fname', 'labels', 'xmin', 'ymin', 'xmax', 'ymax'])\n",
-    "        trainLablesOnly_writer.writerow(['fname', 'labels'])\n",
-    "        test_writer.writerow(['fname', 'labels', 'xmin', 'ymin', 'xmax', 'ymax'])\n",
-    "\n",
-    "        label_dict = {}\n",
-    "        image_labels = {}\n",
-    "        data_counter = data_counter_start\n",
-    "        xml_list = os.listdir(input_path)\n",
-    "        xml_list = [a for a in xml_list if a.endswith(\"xml\")]\n",
-    "\n",
-    "        for data_file in xml_list:\n",
-    "            xml_path = os.path.join(input_path, data_file)\n",
-    "            with open(xml_path, 'r', encoding='utf-8') as f:\n",
-    "                soup = BeautifulSoup(f.read(), 'xml')\n",
-    "                filename = soup.find('filename').text + '.jpg'  # Assuming the image extension is .jpg\n",
-    "\n",
-    "                if filename not in image_labels:\n",
-    "                    image_labels[filename] = set()\n",
-    "\n",
-    "                for obj in soup.find_all('object'):\n",
-    "                    label = obj.find('name').text\n",
-    "                    xmin = obj.bndbox.find('xmin').text\n",
-    "                    ymin = obj.bndbox.find('ymin').text\n",
-    "                    xmax = obj.bndbox.find('xmax').text\n",
-    "                    ymax = obj.bndbox.find('ymax').text\n",
-    "                    image_labels[filename].add(label)\n",
-    "\n",
-    "                    # Write to the test set or the full training set CSV\n",
-    "                    if data_counter in test_set:\n",
-    "                        test_writer.writerow([filename, label, xmin, ymin, xmax, ymax])\n",
-    "                    else:\n",
-    "                        train_writer.writerow([filename, label, xmin, ymin, xmax, ymax])\n",
-    "\n",
-    "                data_counter += 1\n",
-    "\n",
-    "        # Write aggregated labels for each image to the training labels only CSV\n",
-    "        for filename, labels in image_labels.items():\n",
-    "            trainLablesOnly_writer.writerow([filename, ' '.join(labels)])\n",
-    "\n",
-    "    print('File processing completed.')\n",
-    "\n",
-    "# 使用參數呼叫函數\n",
-    "all_classes = {\"tDC01\": \"tDC01\", \"tDE02\": \"tDE02\", \"tDE03\": \"tDE03\", \"tDM04\": \"tDM04\", \"tDP05\": \"tDP05\", \"tDP06\": \"tDP06\", \"tDS07\": \"tDS07\", \"tDC08\": \"tDC08\", \"tDL09\": \"tDL09\", \"tDM10\": \"tDM10\", \"tDD11\": \"tDD11\", \"tDA12\": \"tDA12\"}\n",
-    "input_path = \"D:\\\\imgdata\\\\Tea\\\\NormalDisease\\\\\"\n",
-    "annotation_path = \"C:\\\\Users\\\\user\\\\Desktop\\\\Tea disease identification model\\\\pre\\\\InputDataSu\\\\test06032024\\\\Annotations\\\\\"\n",
-    "image_path = \"C:\\\\Users\\\\user\\\\Desktop\\\\Tea disease identification model\\\\pre\\\\InputDataSu\\\\test06032024\\\\Images\\\\\"\n",
-    "csv_path = \"C:\\\\Users\\\\user\\\\Desktop\\\\Tea disease identification model\\\\pre\\\\InputDataSu\\\\test06032024\\\\\"\n",
-    "test_path = \"C:\\\\Users\\\\user\\\\Desktop\\\\Tea disease identification model\\\\pre\\\\InputDataSu\\\\test06032024\\\\Test\\\\\"\n",
-    "\n",
-    "# 確保所有目錄存在\n",
-    "os.makedirs(annotation_path, exist_ok=True)\n",
-    "os.makedirs(image_path, exist_ok=True)\n",
-    "os.makedirs(test_path, exist_ok=True)\n",
-    "\n",
-    "run_convert(all_classes, input_path, annotation_path, image_path, csv_path, test_path)\n",
     "\n"
    ]
   },
