--- a/茶樹病害影像辨識模型原始專案說明.md
+++ b/茶樹病害影像辨識模型原始專案說明.md
@@ -84,9 +84,9 @@
 
 模型經過評估，並在測試數據上達到以下性能 :
 
-- 精度: [73 %]
-- 召回率: [66 %]
-- F1 分數: [89 %]
+- 精度: [91.6 %]
+- 召回率: [70.4 %]
+- F1 分數: [77.2 %]
 
 ### 模型可視化
 
@@ -101,14 +101,14 @@
 > AI 模型對於輸入數據的變化或干擾的抵抗能力，可以對資料進行一些擾動來檢測模型的穩定性
 
 對於內部資料集驗證（進行對抗樣本測試）
-|                   對抗樣本(茶樹徵狀照片)                        |                            推論結果(模型判斷病害結果)                       |
+|                  推論結果(模型判斷病害結果) 正確病名                       |                            模型可視化(模型判斷病害結果)                       |
 | :--------------------------------------------------------: | :----------------------------------------------------------------: |
-| <img src="尚未上傳......另外補圖"> | <img src="尚未上傳......另外補圖"> |
+| <img src="./img/result/218赤葉枯病train.JPG" width="500"> | <img src="./img/218赤葉枯病train.JPG" width="500"> |
 
 對於外部資料集驗證
 |                   外部資料集(茶樹徵狀照片)                    |                          推論結果(模型判斷病害結果)                   |
 | :----------------------------------------------------: | :----------------------------------------------------------: |
-| <img src="尚未上傳......另外補圖"> | <img src="尚未上傳......另外補圖"> |
+| <img src="./img/result/1866test藻斑病.JPG" width="500"> | <img src="./img/1866test藻斑病gradcam.JPG" width="500"> |
 
 
 
@@ -160,8 +160,8 @@
 
 ### 原始碼
 
-> 資料品質篩選程式碼，請參考 [GitHub](https://github.com) 參考。
-> AI影像辨識訓練程式碼，請參考 [GitHub](https://github.com) 參考。
+> 資料品質篩選程式碼，請參考 [predata.ipynb](https://github.com/Nchuai04/Tea-disease-identification-model/blob/main/predata.ipynb) 參考。
+> AI影像辨識訓練程式碼，請參考 [TeaDiseaseAI-imbalances-combineData.py](https://github.com/Nchuai04/Tea-disease-identification-model/blob/main/TeaDiseaseAI-imbalances-combineData.py) 參考。
 
 
 ## 參考文獻
