--- a/茶樹病害影像辨識模型原始專案說明.md
+++ b/茶樹病害影像辨識模型原始專案說明.md
@@ -18,7 +18,7 @@
 
 |                       原始圖片(茶樹徵狀照片)                       |                          推論結果(模型判斷病害結果)                           |
 | :--------------------------------------------------------------: | :---------------------------------------------------------------------: |
-| <img src="./img/tea_sample.jpg" width="500"> | <img src="./img/result2.jpg" width="500"> |
+| <img src="./img/input.jpg" width="500"> | <img src="./img/結果.jpg" width="500"> |
 
 
 ## 模型
@@ -94,7 +94,7 @@
 
 |   層    |                                 圖片                           |
 | :-----: | :-----------------------------------------------------------: |
-|  side7  |   <img src="./img/gradCAM_small.jpg" width="500">   |
+|  side7  |   <img src="./img/gradcam.jpg" width="500">   |
 
 ### 模型穩定性
 
